Another revision of the FAPI code. Due to a problem in Freetype which needs further investigation, we cannot produce an outline, then decide to produce a bitmap if it is small enough. We work around this by producing a bitmap, and if it is too large, dispose of it, and retry with an outline, thus although we still risk larger than ideal memory use, it is very short lived. A glyph too large to be cached (for which we will now usually use an outline) does not suffer from the Freetype issue mentioned above.

The maximum allowable bit for Freetype to produce is now 1.5 x the maximum
cache bitmap as set in the Postscript state - it is set larger than the
cache bitmap since it is *vital* that if GS expects a bitmap to be cache
we supply a bitmap. Given that the bounding boxes arrived at the GS cache
device and the Freetype rendering code arrived at slightly differently, there
would be the chance of edge cases where FAPI would produce an outline, when
the cache expects a bitmap. Allowing FAPI plenty of leeway avoids that.

The calculation to convert a quadratic to a cubic spline in the
Freetype interface code was slightly wrong.

Also, FAPI now sets the fill adjust to 0 for filling outline glyph, instead
of inhereting the value from the originating graphics state, which gives
*much* more consistent output between the bitmap and outline cases, and
addresses the slightly excessive boldness observed for outline glyphs since
the adoption of Freetype/FAPI as the default font scaler/renderer.

Finally, support for the existing Ghostscrit text anti-aliasing
capability is improved.

Bug 691604

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11712 a1074d23-0009-0410-80fe-cf8c14f379e6