gs/psi/fapi_ft.c
@@ -30,6 +30,7 @@
 #include "gsmalloc.h"
 #include "gxfixed.h"
 #include "gdebug.h"
+#include "gxbitmap.h"
 
 /* FreeType headers */
 #include <ft2build.h>
@@ -39,7 +40,10 @@
 #include FT_SYSTEM_H
 #include FT_MODULE_H
 #include FT_TRIGONOMETRY_H
+#include FT_BBOX_H
 #include FT_OUTLINE_H
+#include FT_IMAGE_H
+
 
 /* Note: structure definitions here start with FF_, which stands for 'FAPI FreeType". */
 
@@ -358,13 +362,15 @@ ft_to_gs_error(FT_Error a_error)
  */
 static FAPI_retcode
 load_glyph(FAPI_font *a_fapi_font, const FAPI_char_ref *a_char_ref,
-	FAPI_metrics *a_metrics, FT_Glyph *a_glyph, bool a_bitmap)
+	FAPI_metrics *a_metrics, FT_Glyph *a_glyph, bool a_bitmap, int max_bitmap)
 {
     FT_Error ft_error = 0;
     FT_Error ft_error_fb = 1;
     FF_face *face = (FF_face*)a_fapi_font->server_font_data;
     FT_Face ft_face = face->ft_face;
     int index = a_char_ref->char_code;
+    FT_Long w;
+    FT_Long h;
 
     /* Save a_fapi_font->char_data, which is set to null by FAPI_FF_get_glyph as part of a hack to
      * make the deprecated Type 2 endchar ('seac') work, so that it can be restored
@@ -424,10 +430,10 @@ load_glyph(FAPI_font *a_fapi_font, const FAPI_char_ref *a_char_ref,
         /* maintain consistency better.  (FT_LOAD_NO_BITMAP) */
         a_fapi_font->char_data = saved_char_data;
         if (!a_fapi_font->is_type1)
-            ft_error = FT_Load_Glyph(ft_face, index, a_bitmap ? FT_LOAD_MONOCHROME | FT_LOAD_RENDER | FT_LOAD_NO_BITMAP : FT_LOAD_MONOCHROME | FT_LOAD_NO_BITMAP);
+            ft_error = FT_Load_Glyph(ft_face, index, a_bitmap ?  FT_LOAD_RENDER | FT_LOAD_MONOCHROME | FT_LOAD_NO_BITMAP : FT_LOAD_MONOCHROME | FT_LOAD_NO_BITMAP);
 	else {
             /* Current FreeType hinting for type 1 fonts is so poor we are actually better off without it (fewer files render incorrectly) (FT_LOAD_NO_HINTING) */
-            ft_error = FT_Load_Glyph(ft_face, index, a_bitmap ? FT_LOAD_MONOCHROME | FT_LOAD_RENDER | FT_LOAD_NO_HINTING | FT_LOAD_NO_BITMAP: FT_LOAD_MONOCHROME | FT_LOAD_NO_HINTING | FT_LOAD_NO_BITMAP);
+            ft_error = FT_Load_Glyph(ft_face, index, a_bitmap ?  FT_LOAD_RENDER | FT_LOAD_MONOCHROME | FT_LOAD_NO_HINTING | FT_LOAD_NO_BITMAP: FT_LOAD_MONOCHROME | FT_LOAD_NO_HINTING | FT_LOAD_NO_BITMAP);
 	    if (ft_error == FT_Err_Invalid_File_Format) 
 		return index+1;
 	}
@@ -435,7 +441,11 @@ load_glyph(FAPI_font *a_fapi_font, const FAPI_char_ref *a_char_ref,
 
     if (ft_error == FT_Err_Too_Many_Hints || ft_error == FT_Err_Invalid_Argument || ft_error == FT_Err_Too_Many_Function_Defs || ft_error == FT_Err_Invalid_Glyph_Index) {
         a_fapi_font->char_data = saved_char_data;
-        ft_error = FT_Load_Glyph(ft_face, index, a_bitmap ? FT_LOAD_MONOCHROME | FT_LOAD_RENDER | FT_LOAD_NO_HINTING | FT_LOAD_NO_BITMAP: FT_LOAD_MONOCHROME | FT_LOAD_NO_HINTING | FT_LOAD_NO_BITMAP);
+        ft_error = FT_Load_Glyph(ft_face, index, a_bitmap ?  FT_LOAD_RENDER | FT_LOAD_MONOCHROME | FT_LOAD_NO_HINTING | FT_LOAD_NO_BITMAP: FT_LOAD_MONOCHROME | FT_LOAD_NO_HINTING | FT_LOAD_NO_BITMAP);
+    }
+    
+    if (ft_error == FT_Err_Out_Of_Memory || ft_error == FT_Err_Array_Too_Large) {
+        return(e_VMerror);
     }
 
     /* If FT gives us an error, try to fall back to the notdef - if that doesn't work, we'll throw an error over to Ghostscript */
@@ -443,7 +453,7 @@ load_glyph(FAPI_font *a_fapi_font, const FAPI_char_ref *a_char_ref,
         a_fapi_font->char_data = (void *)".notdef";
         a_fapi_font->char_data_len = 7;
         
-        ft_error_fb = FT_Load_Glyph(ft_face, 0, a_bitmap ? FT_LOAD_MONOCHROME | FT_LOAD_RENDER | FT_LOAD_NO_HINTING | FT_LOAD_NO_BITMAP: FT_LOAD_MONOCHROME | FT_LOAD_NO_HINTING | FT_LOAD_NO_BITMAP);
+        ft_error_fb = FT_Load_Glyph(ft_face, 0, a_bitmap ?  FT_LOAD_RENDER | FT_LOAD_MONOCHROME | FT_LOAD_NO_HINTING | FT_LOAD_NO_BITMAP: FT_LOAD_MONOCHROME | FT_LOAD_NO_HINTING | FT_LOAD_NO_BITMAP);
         
         a_fapi_font->char_data = saved_char_data;
         a_fapi_font->char_data_len = saved_char_data_len;
@@ -456,10 +466,10 @@ load_glyph(FAPI_font *a_fapi_font, const FAPI_char_ref *a_char_ref,
     {
         FT_Long hx;
         FT_Long hy;
-        FT_Long w;
-        FT_Long h;
         FT_Long hadv;
         FT_Long vadv;
+        
+        FT_BBox      cbox;
 
         /* In order to get the metrics in the form we need them, we have to remove the size scaling
          * the resolution scaling, and convert to points.
@@ -490,10 +500,20 @@ load_glyph(FAPI_font *a_fapi_font, const FAPI_char_ref *a_char_ref,
         a_metrics->v_escapement = vadv;
         a_metrics->em_x = ft_face->units_per_EM;
         a_metrics->em_y = ft_face->units_per_EM;
+
     }
 
     if ((!ft_error || !ft_error_fb) && a_glyph)
         ft_error = FT_Get_Glyph(ft_face->glyph, a_glyph);
+
+    if (a_bitmap && a_glyph && ft_face->glyph->format == FT_GLYPH_FORMAT_BITMAP) {
+        FT_BitmapGlyph bg = (FT_BitmapGlyph)*a_glyph;
+
+        if (bitmap_raster(bg->bitmap.width) * bg->bitmap.rows > max_bitmap) {
+            ft_glyphslot_free_bitmap(ft_face->glyph);
+            return (e_VMerror);
+        }
+    }
 
     if (ft_error == FT_Err_Too_Many_Hints) {
 #ifdef DEBUG
@@ -628,10 +648,12 @@ make_rotation(FT_Matrix *a_transform, const FT_Vector *a_vector)
  * The scaling part is used for setting the pixel size for hinting.
  */
 static void
-transform_decompose(FT_Matrix *a_transform, int xres, int yres, FT_Fixed *a_x_scale, FT_Fixed *a_y_scale)
+transform_decompose(FT_Matrix *a_transform, FT_UInt *xresp, FT_UInt *yresp, FT_Fixed *a_x_scale, FT_Fixed *a_y_scale)
 {
     double scalex, scaley, fact = 1.0;
     FT_Matrix ftscale_mat;
+    FT_UInt xres = *xresp;
+    FT_UInt yres = *yresp;
     
     scalex = hypot ((double)a_transform->xx, (double)a_transform->xy) / 65536.0;
     scaley = hypot ((double)a_transform->yx, (double)a_transform->yy) / 65536.0;
@@ -679,7 +701,17 @@ transform_decompose(FT_Matrix *a_transform, int xres, int yres, FT_Fixed *a_x_sc
             scalex *= fact;
         }
         
-        
+        /* We also have to watch for variable overflow in Freetype.
+         * I've opted to fiddle with the resolution here, as it is
+         * almost always a larger value than the text size, and therefore
+         * we have more scope to manipulate it.
+         */
+        fact = 1;
+        while (((scalex * xres) / 72) > 256.0 && xres > 0 && yres > 0) {
+            xres /= 2;
+            yres /= 2;
+            fact *= 2;
+        }
     }
     else
     {
@@ -698,16 +730,27 @@ transform_decompose(FT_Matrix *a_transform, int xres, int yres, FT_Fixed *a_x_sc
             scaley *= fact;
             scalex *= fact;
         }
+        
+        /* see above */
+        fact = 1;
+        while (((scaley * yres) / 72) > 256.0 && xres > 0 && yres > 0) {
+            xres /= 2;
+            yres /= 2;
+            
+            fact *= 2;
+        }
     }
-    
-    ftscale_mat.xx = (FT_Fixed)(((1.0 / scalex)) * 65536.0);
+        
+    ftscale_mat.xx = (FT_Fixed)(((1.0 / scalex)) * 65536.0) * fact;
     ftscale_mat.xy = 0;
     ftscale_mat.yx = 0;
-    ftscale_mat.yy = (FT_Fixed)(((1.0 / scaley)) * 65536.0);
+    ftscale_mat.yy = (FT_Fixed)(((1.0 / scaley)) * 65536.0) * fact;
     
     FT_Matrix_Multiply (a_transform, &ftscale_mat);
     memcpy(a_transform, &ftscale_mat, sizeof(FT_Matrix));
         
+    *xresp = xres;
+    *yresp = yres;
     /* Return values ready scaled for FT */
     *a_x_scale = (FT_Fixed)(scalex * 64);
     *a_y_scale = (FT_Fixed)(scaley * 64);
@@ -870,8 +913,8 @@ get_scaled_font(FAPI_server *a_server, FAPI_font *a_font,
         /* Split the transform into scale factors and a rotation-and-shear
          * transform.
          */
-        transform_decompose(&face->ft_transform, face->horz_res, face->vert_res, &face->width, &face->height);
-		
+        transform_decompose(&face->ft_transform, &face->horz_res, &face->vert_res, &face->width, &face->height);
+        
         ft_error = FT_Set_Char_Size(face->ft_face, face->width, face->height,
                 face->horz_res, face->vert_res);
         
@@ -979,7 +1022,7 @@ static FAPI_retcode
 get_char_width(FAPI_server *a_server, FAPI_font *a_font, FAPI_char_ref *a_char_ref, FAPI_metrics *a_metrics)
 {
     FF_server *s = (FF_server*)a_server;
-    return load_glyph(a_font, a_char_ref, a_metrics, (FT_Glyph*)&s->bitmap_glyph, true);
+    return load_glyph(a_font, a_char_ref, a_metrics, (FT_Glyph*)&s->bitmap_glyph, a_server->max_bitmap > 0 ? true : false, a_server->max_bitmap);
 }
 
 static FAPI_retcode get_fontmatrix(FAPI_server *server, gs_matrix *m)
@@ -1003,7 +1046,7 @@ get_char_raster_metrics(FAPI_server *a_server, FAPI_font *a_font,
 	FAPI_char_ref *a_char_ref, FAPI_metrics *a_metrics)
 {
     FF_server *s = (FF_server*)a_server;
-    FAPI_retcode error = load_glyph(a_font, a_char_ref, a_metrics, (FT_Glyph*)&s->bitmap_glyph, true);
+    FAPI_retcode error = load_glyph(a_font, a_char_ref, a_metrics, (FT_Glyph*)&s->bitmap_glyph, true, a_server->max_bitmap);
     return error;
 }
 
@@ -1036,14 +1079,14 @@ get_char_outline_metrics(FAPI_server *a_server, FAPI_font *a_font,
 	FAPI_char_ref *a_char_ref, FAPI_metrics *a_metrics)
 {
     FF_server *s = (FF_server*)a_server;
-    return load_glyph(a_font, a_char_ref, a_metrics, (FT_Glyph*)&s->outline_glyph, false);
+    return load_glyph(a_font, a_char_ref, a_metrics, (FT_Glyph*)&s->outline_glyph, false, a_server->max_bitmap);
 }
 
 typedef struct FF_path_info_s
 {
     FAPI_path *path;
-    FracInt x;
-    FracInt y;
+    int64_t x;
+    int64_t y;
 } FF_path_info;
 
 static int move_to(const FT_Vector *aTo, void *aObject)
@@ -1056,8 +1099,9 @@ static int move_to(const FT_Vector *aTo, void *aObject)
      * FT returns a 26.6 format. Rescale to 16.16 so that FAPI will
      * be able to convert to GS co-ordinates properly.
      */
-    p->x = aTo->x << 10;
-    p->y = aTo->y << 10;
+     /* FAPI now expects these coordinates in 32.32 */
+    p->x = ((int64_t)aTo->x) << 26;
+    p->y = ((int64_t)aTo->y) << 26;
 
     return p->path->moveto(p->path, p->x, p->y) ? -1 : 0;
 }
@@ -1067,8 +1111,8 @@ static int line_to(const FT_Vector *aTo, void *aObject)
     FF_path_info *p = (FF_path_info*)aObject;
 
     /* See move_to() above */
-    p->x = aTo->x << 10;
-    p->y = aTo->y << 10;
+    p->x = ((int64_t)aTo->x) << 26;
+    p->y = ((int64_t)aTo->y) << 26;
 
     return p->path->lineto(p->path, p->x, p->y) ? -1 : 0;
 }
@@ -1076,8 +1120,10 @@ static int line_to(const FT_Vector *aTo, void *aObject)
 static int conic_to(const FT_Vector *aControl, const FT_Vector *aTo, void *aObject)
 {
     FF_path_info *p = (FF_path_info*)aObject;
-    floatp x, y, Controlx, Controly, Control1x, Control1y, Control2x, Control2y;
-
+    floatp x, y, Controlx, Controly;
+    int64_t Control1x, Control1y, Control2x, Control2y;
+    floatp sx, sy;
+    
     /* More complivated than above, we need to do arithmetic on the
      * co-ordinates, so we want them as floats and we will convert the
      * result into 16.16 fixed precision for FAPI
@@ -1085,44 +1131,50 @@ static int conic_to(const FT_Vector *aControl, const FT_Vector *aTo, void *aObje
      * NB this code is funcitonally the same as the original, but I don't believe
      * the comment (below) to be what the code is actually doing....
      *
+     * NB2: the comment below was wrong, even though the code was correct(!!)
+     * The comment has now been amended.
+     *
      * Convert a quadratic spline to a cubic. Do this by changing the three points
-     * A, B and C to A, 1/3(B,A), 1/3(B,C), C - that is, the two cubic control points are
+     * A, B and C to A, 2/3(B,A), 2/3(B,C), C - that is, the two cubic control points are
      * a third of the way from the single quadratic control point to the end points. This
      * gives the same curve as the original quadratic.
      */
 
-    x = aTo->x / 64;
-    p->x = float2fixed(x) << 8;
-    y = aTo->y / 64;
-    p->y = float2fixed(y) << 8;
-    Controlx = aControl->x / 64;
-    Controly = aControl->y / 64;
+    sx = (floatp)(p->x >> 32);
+    sy = (floatp)(p->y >> 32);
 
-    Control1x = float2fixed((x + Controlx * 2) / 3) << 8;
-    Control1y = float2fixed((y + Controly * 2) / 3) << 8;
-    Control2x = float2fixed((x + Controlx * 2) / 3) << 8;
-    Control2y = float2fixed((y + Controly * 2) / 3) << 8;
+    x = aTo->x / 64.0;
+    p->x = ((int64_t)float2fixed(x)) << 24;
+    y = aTo->y / 64.0;
+    p->y = ((int64_t)float2fixed(y)) << 24;
+    Controlx = aControl->x / 64.0;
+    Controly = aControl->y / 64.0;
 
-    return p->path->curveto(p->path, (FracInt)Control1x,
-	    (FracInt)Control1y,
-	    (FracInt)Control2x,
-	    (FracInt)Control2y,
+    Control1x = ((int64_t)float2fixed((sx + Controlx * 2) / 3)) << 24;
+    Control1y = ((int64_t)float2fixed((sy + Controly * 2) / 3)) << 24;
+    Control2x = ((int64_t)float2fixed((x + Controlx * 2) / 3)) << 24;
+    Control2y = ((int64_t)float2fixed((y + Controly * 2) / 3)) << 24;
+
+    return p->path->curveto(p->path, Control1x,
+	    Control1y,
+	    Control2x,
+	    Control2y,
 	    p->x, p->y) ? -1 : 0;
 }
 
 static int cubic_to(const FT_Vector *aControl1, const FT_Vector *aControl2, const FT_Vector *aTo, void *aObject)
 {
     FF_path_info *p = (FF_path_info*)aObject;
-    unsigned long Control1x, Control1y, Control2x, Control2y;
+    int64_t Control1x, Control1y, Control2x, Control2y;
 
     /* See move_to() above */
-    p->x = aTo->x << 10;
-    p->y = aTo->y << 10;
+    p->x = ((int64_t)aTo->x) << 26;
+    p->y = ((int64_t)aTo->y) << 26;
 
-    Control1x = aControl1->x << 10;
-    Control1y = aControl1->y << 10;
-    Control2x = aControl2->x << 10;
-    Control2y = aControl2->y << 10;
+    Control1x = ((int64_t)aControl1->x) << 26;
+    Control1y = ((int64_t)aControl1->y) << 26;
+    Control2x = ((int64_t)aControl2->x) << 26;
+    Control2y = ((int64_t)aControl2->y) << 26;
     return p->path->curveto(p->path, Control1x, Control1y, Control2x, Control2y, p->x, p->y) ? -1 : 0;
 
     p->x = aTo->x;
@@ -1201,6 +1253,8 @@ static const FAPI_server TheFreeTypeServer =
     16, /* frac_shift */
     {gs_no_id},
     {0},
+    0,
+    false,
     {1, 0, 0, 1, 0, 0},
     ensure_open,
     get_scaled_font,
