gs/psi/fapiufst.c
@@ -1297,6 +1297,7 @@ static const i_plugin_descriptor ufst_descriptor = {
     gs_fapiufst_finit
 };
 
+
 static const FAPI_server If0 = {
     {   &ufst_descriptor
     },
